[tool.poetry]
name = "cloak"
version = "0.1.0"
description = ""
authors = ["vcokltfre <vcokltfre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
taskipy = "^1.10.4"

[tool.taskipy.tasks]
format = "black . && isort --profile black ."

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
